Fix padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
 
   .resume-buttons-container {
     flex-direction: column;
+    padding: 0 5% 0 5%;
   } 
 
   .resume-buttons-container > *:not(:last-child) {
@@ -81,7 +82,8 @@
   }
 
   .big-text {
-    text-align: center;
+    text-align:center;
+    padding: 0 5% 0 5%;
   }
 
 }
@@ -141,7 +143,7 @@ a {
 }
 
 .resume-buttons-container > *:not(:last-child) {
-  padding-right: 18px;
+  padding-right: 24px;
 }
 
 .resume-section {
